# Second-Brain-Agent

./: .env.example  .env.free-tier  .gitignore  .pre-commit-config.yaml  BRAIN_REPOSITORIES.md  CONTRIBUTING.md  CURATOR_AGENT.md  FREELANCING_GUIDE.md  GMAIL_SETUP.md  GOOGLE_CALENDAR_SETUP.md  IMPLEMENTATION_SUMMARY.md  ISSUES_AND_SOLUTIONS.md  MANIFEST.in  Makefile  PHASE2_COMPLETION_SUMMARY.md  PHASE2_QUICK_REFERENCE.md  PHASE3_ANALYTICS_COMPLETE.md  PHASE3_SESSION_SUMMARY.md  PHASE3_STATUS.md  PHASE3_VERIFICATION_CHECKLIST.md  PROJECT_STRUCTURE.md  PROJECT_TYPE_DETECTION.md  QUICK_REFERENCE.md  QUICK_START_BRAINS.md  QUICK_START_FREE.md  README.md  SCHEDULING.md  SETUP_CHECKLIST.md  app.py  architect.py  chief_of_staff.py  curator.py  dashboard.py  demo_triggers.py  design.md  dev_team.py  example_schema.txt  freelance_workflow.py  ingest_all_brains.py  pyproject.toml  (+10 more)
.github/workflows/: ci.yml
analytics/: generation_metrics.jsonl  summary.json
deal-intelligence-mvp/: .gitignore  README.md
deal-intelligence-mvp/backend/src/: from fastapi import APIRouter  from fastapi import APIRouter, Depends, HTTPException, status  from fastapi import FastAPI  from pydantic import BaseModel, Field  from pydantic_settings import BaseSettings  from sqlalchemy import Column, Integer, String, Float  from sqlalchemy import create_engine  from sqlalchemy.orm import Session  import pytest
django_migrations/: 0001_create_blog_tables.py
docs/: ANALYTICS_QUICK_REF.md  CROSS_AGENT_TRIGGERS.md  DASHBOARD.md  FREE_TIER_SETUP.md  Financial Market Intelligence System_tdd.md  IMPLEMENTATION_CROSS_AGENT_TRIGGERS.md  INSTANT_CONSULTANT_USAGE.md  MULTI_MODEL_CONFIGURATION.md  PHASE1_INSTANT_CONSULTANT.md  PHASE2_EXAMPLES.md  PHASE2_RAPID_PROTOTYPER_DESIGN.md  PHASE2_SUMMARY.md  PHASE3_FEATURES.md  SELF_HEALING.md  TRIGGERS_QUICK_REF.md  USER_GUIDE.md
examples/: job_description_example.txt
jobs/: sample_upwork_job.txt
migrations/: 20251208_140103_create_blog_tables.py
output/triggers/: queued_triggers.json
prisma/: schema.prisma
proposals/: proposal_TechStartup_20251208_144310.md
scripts/: setup_dev.bat  setup_dev.sh  verify_phase2.py
src/: __init__.py  architect_graph.py  brain.py  chief_of_staff.py  config.py  curator_graph.py  dev_team_graph.py  graph.py  ingest_expert.py  ingest_notes.py  ingestion_dispatcher.py  main.py  repository_maintenance.py
src/agents/: __init__.py
src/agents/architect/: __init__.py  graph.py  state.py
src/agents/chief_of_staff/: __init__.py  chief_of_staff.py  graph.py  runner.py  state.py
src/agents/curator/: __init__.py  graph.py  models.py  state.py
src/agents/dev_team/: __init__.py  advanced_scaffolder.py  code_generator.py  graph.py  parsers.py  runner_node.py  state.py
src/cli/: __init__.py  main.py
src/constants/: __init__.py
src/core/: __init__.py  async_llm_executor.py  async_processing.py  brain.py  config.py  cost_estimator.py  llm_factory.py  response_cache.py  settings.py  templates.py  variants.py
src/ingestion/: __init__.py  dispatcher.py  ingest_expert.py  ingest_notes.py  maintenance.py  parent_child_code_parser.py  parent_child_ingestion.py  reingest_with_parent_child.py
src/tools/: __init__.py  agent_triggers.py  gmail.py  google_calendar.py  memory.py
src/ui/: __init__.py  architect_page.py  chat_page.py  chief_page.py  devteam_page.py
src/utils/: __init__.py  analytics.py  code_runner.py  docker_utils.py  exceptions.py  logger.py  migration_generator.py  output_manager.py  progress.py  security_scanner.py  test_generator.py  validators.py
tests/: PHASE2_TESTS_README.md  README.md  conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_workflows.py
tests/unit/: test_agent_triggers.py  test_analytics.py  test_cli.py  test_config.py  test_exceptions.py  test_output_manager.py  test_progress.py  test_sample_calculator.py  test_self_healing.py  test_validators.py
typeorm_migrations/: 20251208_140640-CreateBlogTables.ts
